added player vs player logic

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div id="cb" class='bottom'> <p id='c2'></p> </div>
       <div id="cc" class='bottom'> <p id='c3'></p> </div>
   </div>
-
+  <div id="gameText"> <p> GAME TEXT </p> </div>
 
   <script src="js/script.js"></script>
 </body>
