added AI that is really really dumb, but hey it works. Also added a scoreboard and a game select screen

--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 </head>
 
 <body>
+  <div id='gameSelect'>
+    <div>
+      <button id='playerStart'> Player Vs Player </button>
+    </div>
+    <div>
+      <button id='computerStart'> Player Vs Computer </button> 
+    </div>
+  </div>
 <header>
     <h1> TIC TAC TOE </h1>
     <div>
-        <p> PLAYER 1:</p>
-        <p> PLAYER 2:</p>
+        <p id='player1'> Player: 0</p>
+        <p id= 'player2'> Computer: 0</p>
     </div>
 </header>
   <div id='main-container'>
